tests/exo-4/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: kube-prometheus-stack-prometheus
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port: 
              number: 9090
